добавлена обработка новой внутриигровой ошибки GlobalMessageBoxes.ServerOverloaded

--- a/GwentBot.Tests/GwentBot.Tests.csproj
+++ b/GwentBot.Tests/GwentBot.Tests.csproj
@@ -265,6 +265,9 @@
     <Content Include="ComputerVision\GlobalMessageBoxes\ErrorSearchingOpponentSrc.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="ComputerVision\GlobalMessageBoxes\ServerOverloadedSrc.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="ComputerVision\Notifications\FriendlyDuelSrc.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
