--- a/GwentBot/GwentBot.csproj
+++ b/GwentBot/GwentBot.csproj
@@ -184,6 +184,9 @@
     <Content Include="ComputerVision\PatternsForCV\GlobalMessageBoxes\ErrorSearchingOpponent-Text.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="ComputerVision\PatternsForCV\GlobalMessageBoxes\ServerOverloaded-Text.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="ComputerVision\PatternsForCV\Notifications\FriendlyDuel.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
