добавлена темная тема GUI; создана основа DI классов управления устройствами ввода.

--- a/GwentBot.GUI/GwentBot.GUI.csproj
+++ b/GwentBot.GUI/GwentBot.GUI.csproj
@@ -38,6 +38,9 @@
     <OutputPath>bin\UnitTestsRun\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MonotoneTheme">
+      <HintPath>..\..\..\..\Desktop\Monotone\MonotoneTheme.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -70,6 +73,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Themes\ExpressionDark.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -89,6 +96,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
