добавлена обработка новой ошибки глобальной ошибки: ConnectionError; частично реализован класс GameInput на WinApi

--- a/GwentBot.Tests/GwentBot.Tests.csproj
+++ b/GwentBot.Tests/GwentBot.Tests.csproj
@@ -256,6 +256,9 @@
     <Content Include="ComputerVision\FriendlyGameStartStates\CancelGameMessageBoxSrc.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="ComputerVision\GlobalMessageBoxes\ConnectionErrorSrc.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="ComputerVision\GlobalMessageBoxes\ConnectionLostSrc.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
