--- a/GwentBot/GwentBot.csproj
+++ b/GwentBot/GwentBot.csproj
@@ -70,6 +70,7 @@
     <Compile Include="ComputerVision\GwentWindowScreenShotCreator.cs" />
     <Compile Include="GameInput\AutoitInputDeviceEmulator.cs" />
     <Compile Include="GameInput\IInputDeviceEmulator.cs" />
+    <Compile Include="GameInput\WinApiInputDeviceEmulator.cs" />
     <Compile Include="Model\Deck.cs" />
     <Compile Include="Model\Game.cs" />
     <Compile Include="Model\User.cs" />
@@ -177,6 +178,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="ComputerVision\PatternsForCV\FriendlyGameStartStates\CancelGameMessageBox.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ComputerVision\PatternsForCV\GlobalMessageBoxes\ConnectionError-Text.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="ComputerVision\PatternsForCV\GlobalMessageBoxes\ConnectionLost-Text.png">
