добавлен Nlog настроенный на логирование ошибок работы бота

--- a/GwentBot/packages.config
+++ b/GwentBot/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoItX.Dotnet" version="3.3.14.5" targetFramework="net461" />
+  <package id="NLog" version="4.6.5" targetFramework="net461" />
+  <package id="NLog.Config" version="4.6.5" targetFramework="net461" />
+  <package id="NLog.Schema" version="4.6.5" targetFramework="net461" />
   <package id="OpenCvSharp3-AnyCPU" version="4.0.0.20181129" targetFramework="net461" />
 </packages>
