--- a/GwentBot/NLog.config
+++ b/GwentBot/NLog.config
@@ -28,8 +28,11 @@
     <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
             layout="${longdate} ${uppercase:${level}} ${message}" />
     -->
-    <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
-            layout="${longdate} ${uppercase:${level}} ${message}" />
+    <target xsi:type="File"
+            name="f"
+            fileName="${basedir}/logs/${shortdate}.log"
+            layout="${longdate} ${uppercase:${level}} ${message}"
+            encoding="windows-1251" />
   </targets>
 
   <rules>
